LendARead2-AWS/terraform/modules/sg/main.tf
resource "aws_security_group" "lendaread_lb_sg" {
  name        = format("%s-%s", "lb-security-group", var.env)
  description = "Security group for Load Balancer"
  vpc_id      = var.vpc_id

  ingress {
    from_port   = 8080
    to_port     = 8080
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = merge(
    var.tags,
    { "Name" = "Load Balancer SG" }
  )
}

resource "aws_security_group" "lendaread_api_task_sg" {
  name        = format("%s-%s", "lendaread_api_sg", var.env)
  description = "Security group for ECS tasks to allow traffic on port 8080"
  vpc_id      = var.vpc_id

  ingress {
    from_port       = 8080
    to_port         = 8080
    protocol        = "tcp"
    security_groups = [aws_security_group.lendaread_lb_sg.id]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = merge(
    var.tags,
    { "Name" = "ECS Task Security Group" }
  )
}

resource "aws_security_group" "rds_sg" {
  name        = format("%s-%s", "rds-security-group", var.env)
  description = "Security group for RDS instance to allow access from ECS tasks"
  vpc_id      = var.vpc_id

  ingress {
    from_port       = 5432
    to_port         = 5432
    protocol        = "tcp"
    security_groups = [aws_security_group.lendaread_api_task_sg.id]
  }

  egress {
    from_port       = 0
    to_port         = 0
    protocol        = "-1"
    security_groups = [aws_security_group.lendaread_api_task_sg.id]
  }

  tags = merge(
    var.tags,
    { "Name" = "RDS Security Group" }
  )
}
